# Amulet-IO

./: .gitattributes  .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: python-build.yml  python-stylecheck.yml  python-unittests.yml
src/amulet/io/: _version.py  binary_reader.hpp  binary_writer.hpp
tests/: CMakeLists.txt  _test_amulet_io.py.cpp  _test_amulet_io.pyi  compile.py  test_amulet_io.py
tests/test_amulet_io/: _test_amulet_io.py.cpp  test_amulet_io.py
tools/: cmake_generate.py  compile_tests.py
